# web-wasm-template

./: Cargo.toml  Makefile.toml  README.md
resources/: index.html
src/: lib.rs
