[package]
name = "web-wasm-template"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.71"
wee_alloc = "0.4.5"
console_log = "0.2.0"
log = "0.4.14"
console_error_panic_hook = "0.1.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
